resized the logo and fixed alignment

--- a/docs/_sass/footer.scss
+++ b/docs/_sass/footer.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: space-evenly;
   font-size: 0.8rem;
+
 }
 .copyright-text {
   color: white;
@@ -199,7 +200,7 @@ footer {
       display: block;
 
       img {
-        width: 8rem;
+        width: 7rem;
         vertical-align: middle;
       }
     }
@@ -213,7 +214,7 @@ footer {
     font-size: 2rem;
     font-weight: bolder;
     margin: 0rem 0.5rem;
-    padding-top: 18px;
+    padding-top: 16px;
   }
   .copyright-cont {
     display: flex;
@@ -238,7 +239,7 @@ footer {
   }
 
   h2 {
-    font-size: 1.2em;
+    font-size: 1em;
     margin: 30px 0;
     margin: 15px auto;
     color: #fff;
@@ -288,7 +289,7 @@ footer {
   .footer-columns {
     display: flex;
     justify-content: center;
-    padding-right: 50px;
+    padding-right: 43px;
   }
   .footer-columns2 {
     display: flex;
